crates/velme-cli/tests/snapshots/check__ac_cmp_04_json_for_every_golden_error_file@call_cycle.velme.snap
---
source: crates/velme-cli/tests/check.rs
expression: json
input_file: tests/golden/sema/reject/call_cycle.velme
---
{
  "diagnostics": [
    {
      "code": "VL0304",
      "file": "tests/golden/sema/reject/call_cycle.velme",
      "help": "a goal can't use itself, even through other goals; move the shared work into a new goal",
      "labels": [],
      "message": "These goals call each other in a circle: A → A.",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 9,
        "end": 187,
        "line": 6,
        "start": 175
      }
    },
    {
      "code": "VL0304",
      "file": "tests/golden/sema/reject/call_cycle.velme",
      "help": "a goal can't use itself, even through other goals; move the shared work into a new goal",
      "labels": [],
      "message": "These goals call each other in a circle: B → C → B.",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 9,
        "end": 263,
        "line": 11,
        "start": 255
      }
    }
  ],
  "format": "velme-cli/1",
  "notices": [],
  "results": [],
  "status": "failed"
}
