crates/velme-cli/tests/snapshots/check__ac_cmp_04_json_for_every_golden_error_file@declaration_misspelled.velme.snap
---
source: crates/velme-cli/tests/check.rs
expression: json
input_file: tests/golden/parser/reject/declaration_misspelled.velme
---
{
  "diagnostics": [
    {
      "code": "VL0101",
      "file": "tests/golden/parser/reject/declaration_misspelled.velme",
      "help": "did you mean `type`?",
      "labels": [],
      "message": "I didn't expect `tpye` here — I was looking for `goal`, `language` or `type`.",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 1,
        "end": 129,
        "line": 3,
        "start": 125
      }
    }
  ],
  "format": "velme-cli/1",
  "notices": [],
  "results": [],
  "status": "failed"
}
