crates/velme-cli/tests/snapshots/check__ac_cmp_04_json_for_every_golden_error_file@failed_declaration_is_quiet.velme.snap
---
source: crates/velme-cli/tests/check.rs
expression: json
input_file: tests/golden/sema/reject/failed_declaration_is_quiet.velme
---
{
  "diagnostics": [
    {
      "code": "VL0101",
      "file": "tests/golden/sema/reject/failed_declaration_is_quiet.velme",
      "labels": [],
      "message": "I didn't expect `Text` here — I was looking for `:`.",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 10,
        "end": 136,
        "line": 3,
        "start": 132
      }
    }
  ],
  "format": "velme-cli/1",
  "notices": [],
  "results": [],
  "status": "failed"
}
