crates/velme-cli/tests/snapshots/check__ac_cmp_04_json_for_every_golden_error_file@field_decl_missing_colon.velme.snap
---
source: crates/velme-cli/tests/check.rs
expression: json
input_file: tests/golden/parser/reject/field_decl_missing_colon.velme
---
{
  "diagnostics": [
    {
      "code": "VL0101",
      "file": "tests/golden/parser/reject/field_decl_missing_colon.velme",
      "labels": [],
      "message": "I didn't expect `Text` here — I was looking for `:`.",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 10,
        "end": 136,
        "line": 4,
        "start": 132
      }
    },
    {
      "code": "VL0101",
      "file": "tests/golden/parser/reject/field_decl_missing_colon.velme",
      "labels": [],
      "message": "I didn't expect `height` here — I was looking for `:`.",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 10,
        "end": 170,
        "line": 6,
        "start": 164
      }
    }
  ],
  "format": "velme-cli/1",
  "notices": [],
  "results": [],
  "status": "failed"
}
